tekton/triggers/github-eventlistener-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: app-demo-github-webhook
  namespace: monorepo-cicd
  labels:
    app.kubernetes.io/name: app-demo
    app.kubernetes.io/component: webhook
    app.kubernetes.io/part-of: monorepo-lab
spec:
  to:
    kind: Service
    name: el-app-demo-github-listener
    weight: 100

  port:
    targetPort: http-listener

  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect

  wildcardPolicy: None
